[package]
name = "kvs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
failure = "0.1.5"
serde = "1"
serde_json = "1"
structopt = "0.3.22"
log = "0.4"
env_logger = "0.9"
sled = "0.34"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

